Fix overflow on iPhone SE size

--- a/src/components/BallotTabs.module.scss
+++ b/src/components/BallotTabs.module.scss
@@ -61,7 +61,7 @@
     border-width: 0;
     border-bottom-width: 0;
     text-align: center;
-    padding: 0.75rem 1.5rem;
+    padding: 0.75rem 0.5rem;
   }
 
 
